<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/capsuletops"
    android:orientation="vertical"
    android:padding="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/drawable_15dp"
      android:layout_marginVertical="@dimen/dimen10"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingBottom="10dp">

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="6.5"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubrik_semibold"
            android:text="@string/nuevo_platillo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar

            android:id="@+id/dialog_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/coloramarillo" />
      </LinearLayout>

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/dialog_imageView"
          android:layout_width="0dp"
          android:layout_height="80dp"
          android:layout_weight="3.5"
          android:background="@drawable/fui_idp_button_background_anonymous"
          android:backgroundTint="@color/coloramarillo"
          app:srcCompat="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/acPlatillos"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/capsule_border_comentarios"
        android:fontFamily="@font/rubrik_light"
        android:hint="@string/nombre_del_plato"
        android:padding="10dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingHorizontal="@dimen/dimen10"
        android:paddingVertical="@dimen/margin_top_5dp"
        android:textColor="#534D4D"
        android:textSize="@dimen/texto13sp" />

    <EditText
        android:id="@+id/dialog_text_view_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:inputType="text"
        android:background="@drawable/capsule_border_comentarios"
        android:fontFamily="@font/rubrik_light"
        android:hint="@string/lugar_o_direccion"
        android:padding="10dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingHorizontal="@dimen/dimen10"
        android:paddingVertical="@dimen/margin_top_5dp"
        android:textSize="@dimen/texto13sp" />

    <EditText
        android:id="@+id/dialog_edit_text_precio"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/capsule_border_comentarios"
        android:fontFamily="@font/rubrik_light"
        android:hint="@string/precio"
        android:inputType="number"
        android:padding="10dp"
        android:imeOptions="actionNext"
        android:paddingHorizontal="@dimen/dimen10"
        android:paddingVertical="@dimen/margin_top_5dp"
        android:textSize="@dimen/texto13sp" />
    ç

    <EditText
        android:id="@+id/dialog_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_gravity="top"
        android:layout_margin="2dp"
        android:background="@drawable/capsule_border_comentarios"
        android:fontFamily="@font/rubrik_light"
        android:hint="@string/comentarios"
        android:padding="10dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:paddingHorizontal="@dimen/dimen10"
        android:paddingTop="@dimen/margin_top_5dp"
        android:paddingBottom="@dimen/drawable_15dp"
        android:textColor="#534D4D"
        android:textSize="@dimen/texto13sp" />

    <Button
        android:id="@+id/dialog_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/capsule_border_comentarios"
        android:backgroundTint="@color/coloramarillo"
        android:fontFamily="@font/rubrik_semibold"
        android:text="@string/publicar"
        android:textColor="@color/white"
        android:textSize="@dimen/texto13sp" />
  </LinearLayout>

</LinearLayout>