<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/capsule_border_comentarios"
    android:elevation="@dimen/drawable_15dp"
    android:paddingBottom="10dp"
    tools:context=".View.dialog.dialog_comentario_principal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/drawable_15dp"
            android:layout_marginTop="@dimen/drawable_15dp"
            android:layout_marginRight="@dimen/drawable_15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/text_view_info_platillo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:fontFamily="@font/rubrik_semibold"
                    android:text="@string/restaurante_la_nacional"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/estado"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_margin="@dimen/margin_top_5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/capsule_rv_test"
                    android:backgroundTint="#764CC4"
                    android:fontFamily="@font/rubrik_light"
                    android:gravity="center"
                    android:text="@string/abierto"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/dcp_text_view_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:alpha="0.7"
                android:fontFamily="@font/rubrik_semibold_3"
                android:text="Av. Andres aramburu º859-Surquillo"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/blue_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/quantum_amber50"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_top_5dp"
                android:layout_weight="8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dcp_text_view_precio"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="4"
                    android:drawableLeft="@drawable/ico_soles"
                    android:fontFamily="@font/rubrik_semibold"
                    android:gravity="center|left"
                    android:text="14.50"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dcp_text_view_comida"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="4"
                    android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                    android:fontFamily="@font/rubrik_semibold"
                    android:gravity="center|left"
                    android:text="@string/menu_criollo"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/dcp_text_view_rating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/capsule_boton_border"
                android:drawableLeft="@drawable/ic_star_black_24dp"
                android:gravity="left|center"
                android:text="4,5"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/drawable_15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10"

                >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_top_5dp"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/dcp_image_view_foto_user"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center|top"
                        android:background="@drawable/capsule_rest_infor"
                        android:src="@drawable/fondo01" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_top_5dp"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dcp_text_view_nombre_user"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:fontFamily="@font/rubrik_semibold"
                        android:text="Oscar Rodriguez"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dcp_text_view_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:alpha="0.5"
                        android:fontFamily="@font/rubrik_light"
                        android:text="Setiembre 02, 2019"
                        android:textSize="9sp"
                        android:textStyle="italic" />


                    <TextView
                        android:id="@+id/dcp_text_view_comentario_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/rubrik_regular"
                        android:text="Me fascina la combinación del pollo con las
papas fritas y tomates dorados, excelente. la Nacional"
                        android:textSize="10sp" />


                </LinearLayout>


            </LinearLayout>

        </FrameLayout>
    </LinearLayout>


</FrameLayout>